code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_cli_progress_header.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •   - Running commands                                                  ↑Top
 ▼

  Auto Drive > Ready: run cargo check  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •   - Running commands                                                  ↑Top
 ▼

  Auto Drive > Running cargo check... · Installed dependencies  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •   - Running commands                                                  ↑Top
 ▼

  Auto Drive > Running cargo check... · Installed dependencies  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
