code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_continue_mode_transitions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     R #2 · gpt-5.4 · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands



  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     R #2 · gpt-5.4 · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands



  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     R #2 · gpt-5.4 · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands



  Auto Drive > Auto Drive ready to run cargo nextest  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
