code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_manual_mode_waits.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 942
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     R #2 · gpt-5.3-codex · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands



  Auto Drive > Auto Drive prepared to run justfile target  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
