code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_review_footer_persists.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 920
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
     R #2 · gpt-5.3-codex · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands



  Auto Drive > waiting for code review...  ✶ Awaiting review (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
